server/model: refactor containers
1. Compose containers to reduce code duplication
2. Add some utility methods